README: init commit
Signed-off-by: mitchdz <mitch_dz@hotmail.com>

--- a/Linux_workshop.tex
+++ b/Linux_workshop.tex
@@ -247,7 +247,7 @@
 
 
 \frame{
-	\frametitle{Introduction to a Linux Filesystem Hierarchy Standard (FHS)}
+	\frametitle{Introduction to Filesystem Hierarchy Standard (FHS)}
 	\includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{images/Directory-Filesystem-Hierarchy-Standard.jpg}
 }
 
